--- a/latex/siggraph2013/patternColoring.tex
+++ b/latex/siggraph2013/patternColoring.tex
@@ -101,15 +101,15 @@
 %%% If you choose to have a ``teaser'' image, it needs to be placed between
 %%% ``\begin{document}'' and ``\maketitle.''
 
-%\teaser{
-%
-%\centering
-%\includegraphics[width=\linewidth]{Figures/teaser}
-%\caption{This is a caption!}
-%\label{fig:teaser}
-%\vspace{-1.0em}
-%
-%}
+\teaser{
+
+\centering
+\includegraphics[width=\linewidth]{figs/teaser}
+\caption{This is the awesome caption for the teaser!}
+\label{fig:teaser}
+\vspace{-1.0em}
+
+}
 
 \maketitle
 
