--- a/latex/siggraph2013/patternColoring.tex
+++ b/latex/siggraph2013/patternColoring.tex
@@ -134,7 +134,8 @@
 \input{background.tex}
 \input{approach.tex}
 \input{model.tex}
-\input{resultsAndEval.tex}
+\input{results.tex}
+\input{evaluation.tex}
 \input{discussion.tex}
 %\input{acknowledgments.tex}
 
