Short implementation section.

--- a/latex/siggraph2013/model.tex
+++ b/latex/siggraph2013/model.tex
@@ -21,4 +21,5 @@ Which MH proposals do we use, etc.
 
 \subsection{Implementation}
 \label{sec:implementation}
-Short section. We use factorie, Scala, O'Donovan's MATLAB code, etc. Perhaps link to (a cleaned-up version of) the github repository, once it's ready?
+
+Our prototype implementation of this model is written in the Scala programming language, using the Factorie toolkit for probabilistic modeling~\cite{Factorie}. To evaluate the color compatibility term, it uses the reference MATLAB implementation provided by O'Donovan et al.~\shortcite{ODonovan}. A link to the source code can be found on the project website.
