--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -153,3 +153,11 @@ journal = {Proceedings of the National Academy of Sciences}
  publisher = {ACM},
  address = {New York, NY, USA},
 }
+
+@INPROCEEDINGS{Factorie,
+    author = {Andrew Mccallum and Karl Schultz and Sameer Singh},
+    title = {Factorie: Probabilistic programming via imperatively defined factor graphs},
+    booktitle = {In Advances in Neural Information Processing Systems 22},
+    year = {2009},
+    pages = {1249--1257}
+}
