Added fixed palette, all-permutations figure

--- a/latex/siggraph2013/patternColoring.tex
+++ b/latex/siggraph2013/patternColoring.tex
@@ -112,12 +112,12 @@
         \includegraphics[width=.18\linewidth]{figs/teaser00} & \includegraphics[width=.45\linewidth]{figs/teaser01} & \includegraphics[width=.27\linewidth]{figs/teaser02}\vspace{0.6em}\\
         
         \includegraphics[width=.18\linewidth]{figs/teaser10} & \includegraphics[width=.45\linewidth]{figs/teaser11} & \includegraphics[width=.27\linewidth]{figs/teaser12} \\ 
-        Input Pattern                   & Sampled Colorings               & Random Colorings                \\
+        Input pattern                   & Sampled colorings               & Random colorings                \\
     \end{tabular}
 %\end{table}
 \caption{This is the awesome caption for the teaser! \remark{Other ideas: show no comparison, show O'Donovan comparison} \remark{Visio PDF export for these images is pretty low quality, so I'd vote for keeping everything in TeX and using PNGs/tables.}}
 \label{fig:teaser}
-\vspace{1.0em}
+\vspace{-1.0em}
 
 }
 
