--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -161,3 +161,64 @@ journal = {Proceedings of the National Academy of Sciences}
     year = {2009},
     pages = {1249--1257}
 }
+
+@article{Hastings,
+author = {Hastings, W. K.}, 
+title = {Monte Carlo sampling methods using Markov chains and their applications},
+volume = {57}, 
+number = {1}, 
+pages = {97-109}, 
+year = {1970}, 
+doi = {10.1093/biomet/57.1.97}, 
+abstract ={SUMMARY A generalization of the sampling method introduced by Metropolis et al. (1953) is presented along with an exposition of the relevant theory, techniques of application and methods and difficulties of assessing the error in Monte Carlo estimates. Examples of the methods, including the generation of random orthogonal matrices and potential applications of the methods to numerical problems arising in statistics, are discussed.}, 
+URL = {http://biomet.oxfordjournals.org/content/57/1/97.abstract}, 
+eprint = {http://biomet.oxfordjournals.org/content/57/1/97.full.pdf+html}, 
+journal = {Biometrika} 
+}
+
+@article{Metropolis,
+    abstract = {{A general method, suitable for fast computing machines, for investigating such properties as equations of state for substances consisting of interacting individual molecules is described. The method consists of a modified Monte Carlo integration over configuration space. Results for the two-dimensional rigid-sphere system have been obtained on the Los Alamos MANIAC and are presented here. These results are compared to the free volume equation of state and to a four-term virial coefficient expansion.}},
+    author = {Metropolis, Nicholas and Rosenbluth, Arianna W. and Rosenbluth, Marshall N. and Teller, Augusta H. and Teller, Edward},
+    citeulike-article-id = {531300},
+    citeulike-linkout-0 = {http://scitation.aip.org/getabs/servlet/GetabsServlet?prog=normal\&id=JCPSA6000021000006001087000001\&idtype=cvips\&gifs=yes},
+    citeulike-linkout-1 = {http://link.aip.org/link/?JCP/21/1087},
+    citeulike-linkout-2 = {http://dx.doi.org/10.1063/1.1699114},
+    doi = {10.1063/1.1699114},
+    issn = {00219606},
+    journal = {The Journal of Chemical Physics},
+    keywords = {annealing, simulated},
+    number = {6},
+    pages = {1087--1092},
+    posted-at = {2008-03-26 21:50:35},
+    priority = {2},
+    publisher = {AIP},
+    title = {{Equation of State Calculations by Fast Computing Machines}},
+    url = {http://dx.doi.org/10.1063/1.1699114},
+    volume = {21},
+    year = {1953}
+}
+
+@inproceedings{ParallelTempering,
+  title={Markov chain Monte Carlo maximum likelihood},
+  author={Geyer, C.},
+  year={1991},
+  booktitle={Proc. of the 23rd Symposium on the Inteface: Computing Science and Statistics},
+  pages={156-163}
+}
+
+@inproceedings{MMR,
+ author = {Carbonell, Jaime and Goldstein, Jade},
+ title = {The use of MMR, diversity-based reranking for reordering documents and producing summaries},
+ booktitle = {Proceedings of the 21st annual international ACM SIGIR conference on Research and development in information retrieval},
+ series = {SIGIR '98},
+ year = {1998},
+ isbn = {1-58113-015-5},
+ location = {Melbourne, Australia},
+ pages = {335--336},
+ numpages = {2},
+ url = {http://doi.acm.org/10.1145/290941.291025},
+ doi = {10.1145/290941.291025},
+ acmid = {291025},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
