--- a/latex/siggraph2013/patternColoring.tex
+++ b/latex/siggraph2013/patternColoring.tex
@@ -89,10 +89,8 @@
 \usepackage{booktabs}
 \usepackage{multirow}
 
-\newcommand{\unit}[1]{\ensuremath{\,\mathrm{#1}}}
-
-\newcommand{\remark}[1]{\textcolor{red}{[#1]}}
-%\newcommand{\remark}[1]{}
+%% Macros!!
+\input{macros.tex}
 
 \begin{document}
 
