--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -222,3 +222,19 @@ journal = {Biometrika}
  publisher = {ACM},
  address = {New York, NY, USA},
 } 
+
+@article{TruncatedGaussians,
+year={1995},
+issn={0960-3174},
+journal={Statistics and Computing},
+volume={5},
+issue={2},
+doi={10.1007/BF00143942},
+title={Simulation of truncated normal variables},
+url={http://dx.doi.org/10.1007/BF00143942},
+publisher={Kluwer Academic Publishers},
+keywords={Accept-reject; Gibbs sampling; Markov chain Monte Carlo; censored models; order-restricted models},
+author={Robert, Christian P.},
+pages={121-125},
+language={English}
+}
