Ideas for future work and notes on the Approach section.

--- a/latex/siggraph2013/approach.tex
+++ b/latex/siggraph2013/approach.tex
@@ -1,8 +1,10 @@
 \section{Approach}
 \label{sec:approach}
 
-Restate problem statement, why it's hard, and our approach (emphasizing the key idea)
+\remark{D: Tom Funkhouser sold me on the value of this section, and one of the best examples from his papers is in http://www.cs.princeton.edu/~funk/pvg01.pdf. I actually like combining the Approach and Overview sections into one shorter section, though.}
+
+Restate problem statement, why it's hard, and our approach (emphasizing the key idea)~\remark{Why it's hard: This might be the best place to show the results when we only use color compatibility, i.e. ``As a first approach, you might try using existing color compatibility models...'' and then show how that doesn't work, thus motivating the machinery we're about to describe.}
 
 The (log linear) factor graph formalism (and any other persistent terminology).
 
-Roadmap for the next section (which describes the technical details)
+Roadmap for the next section (which describes the technical details) / overview of the system.
