--- a/latex/siggraph2013/discussion.tex
+++ b/latex/siggraph2013/discussion.tex
@@ -1,4 +1,16 @@
 \section{Discussion and Future Work}
 \label{sec:discussion}
 
-Discuss and prophesize here.
+Summarize, restate contributions.
+
+Discuss...stuff.
+
+Some ideas for future work:
+\begin{itemize}
+ \item{Making it real-time: GPU implementation of parallel tempering (cite Merrell)}
+ \item{Making it real-time: Hamiltonian MCMC via automatic differentiation (cite Wingate)}
+ \item{Working with vector artwork, instead of bitmaps}
+ \item{Beyond a fixed number of color groups: Transdimensional inference.}
+ \item{`Soft' segments with `soft' membership in color groups? Useful for color blending, dealing with more sophisticated artwork}
+ \item{Semantics: use the web to associate color distributions with labels, so that a user can label a region as 'skin' and we can respect that}
+\end{itemize}
