To be safe, temporarily separating out the spatial + color compatibility section, so we don't collide

--- a/latex/siggraph2013/approach.tex
+++ b/latex/siggraph2013/approach.tex
@@ -5,6 +5,13 @@
 
 Restate problem statement, why it's hard, and our approach (emphasizing the key idea)~\remark{Why it's hard: This might be the best place to show the results when we only use color compatibility, i.e. ``As a first approach, you might try using existing color compatibility models...'' and then show how that doesn't work, thus motivating the machinery we're about to describe.}
 
+%Start of notes on pattern template terminology.
+
+
+
+
+
+
 The (log linear) factor graph formalism (and any other persistent terminology).
 
 Roadmap for the next section (which describes the technical details) / overview of the system.
