--- a/latex/siggraph2013/model.tex
+++ b/latex/siggraph2013/model.tex
@@ -3,13 +3,8 @@
 
 In every subsection, motivate why this particular component is important/difficult and why we had to develop something new. Briefly relate to algorithmic details from relevant previous work.
 
-\subsection{Spatial Compatibility}
-\label{sec:spatialCompat}
-Talk about spatial stuff here
-
-\subsection{Color Compatibility}
-\label{sec:colorCompat}
-Talk about color stuff e.g. O'Donovan's model here.
+%To be safe, temporarily separating out the spatial arrangement and color compatibility subsection
+\input{spatialcolor.tex}
 
 \subsection{Weight Learning}
 \label{sec:weights}
