--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -18,11 +18,24 @@
 \begin{tabular}{cc}
 \includegraphics[width=.22\columnwidth]{figs/guidedSearch0Original}&\includegraphics[width=.7\columnwidth]{figs/guidedSearch0MMR}\vspace{0.5em}\\
 \includegraphics[width=.22\columnwidth]{figs/guidedSearch1Original}&\includegraphics[width=.7\columnwidth]{figs/guidedSearch1MMR}\\
-Suggested colors&Highest-scoring assignments\\
+Suggestion&Results\\
 \end{tabular}
 
-\caption{An artist provides an initial color assignment and asks for patterns that are similar. We incorporate this request by adding an additional factor to our model, showing eight MMR-diversified samples for the images on the left.}
+\caption{An artist provides an initial color assignment and asks for patterns that are similar. We incorporate this request by adding an additional factor to our model, showing eight samples drawn from the new model for each of the suggested images.}
 \label{fig:nearbySuggestions}
+\vspace{-1.0em}
+\end{figure}
+
+\begin{figure}[ht]
+\begin{tabular}{ccc} 
+Style&Example&Results\\ %\hline
+\emph{Bold}&\includegraphics[width=.145\columnwidth]{figs/styleResultsBoldExample}&\includegraphics[width=.6\columnwidth]{figs/styleResultsBold}\vspace{0.5em}\\
+\emph{Light}&\includegraphics[width=.145\columnwidth]{figs/styleResultsLightExample}&\includegraphics[width=.6\columnwidth]{figs/styleResultsLight}\vspace{0.5em}\\
+\emph{Dark}&\includegraphics[width=.145\columnwidth]{figs/styleResultsDarkExample}&\includegraphics[width=.6\columnwidth]{figs/styleResultsDark}\vspace{0.5em}\\
+\end{tabular}
+
+\caption{Our model can be trained to match a target color style. In this example, 17 patterns were chosen in three different styles, and a representative image from each style is shown in the second column. A separate model was then trained on each style, and in the third column we show four samples drawn from each model. In each case, our model is able to learn different properties of the desired distribution over colors.}
+\label{fig:styleTraining}
 \vspace{-1.0em}
 \end{figure}
 
