--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -238,3 +238,28 @@ author={Robert, Christian P.},
 pages={121-125},
 language={English}
 }
+
+@inproceedings{NonMLEParameterEstimation,
+ title ={Unifying Non-Maximum Likelihood Learning Objectives with Minimum KL Contraction},
+ author={Siwei Lyu},
+ booktitle = {Advances in Neural Information Processing Systems 24},
+ editor = {J. Shawe-Taylor and R.S. Zemel and P. Bartlett and F.C.N. Pereira and K.Q. Weinberger},
+ pages = {64--72},
+ year = {2011}
+}
+
+@inproceedings{ContrastiveDivergence,
+  title={On contrastive divergence learning},
+  author={Carreira-Perpinan, M.A. and Hinton, G.E.},
+  booktitle={Artificial Intelligence and Statistics},
+  volume={2005},
+  pages={17},
+  year={2005}
+}
+
+@book{PGMBook,
+  title={Probabilistic graphical models: principles and techniques},
+  author={Koller, D. and Friedman, N.},
+  year={2009},
+  publisher={The MIT Press}
+}
