Updated teaser figure to train on more artists. Saving original Sugar-only because the comparison is interesting.

--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -45,7 +45,7 @@ Style&Example&Results\\ %\hline
 Unconstrained sampling&Constrained sampling\\
 \end{tabular}
 
-\caption{An artist coloring a pattern is presented with the results shown on the left, and decides that she does not like results where the stem of the plant is not green. On the right, we use conditional inference to sample from our model subject to the constraint that the desired entry is fixed to a specific color. This is a natural way to incorporate semantic information about regions which cannot be easily learned by our model.}
+\caption{An artist coloring a pattern is presented with the results shown on the left, and decides that she only likes results where the stem of the plant is dark green. On the right, we use conditional inference to sample from our model subject to the constraint that the desired palette entry is fixed to a specific color. This is a natural way to incorporate semantic information about region colors which cannot be easily learned by our model.}
 \label{fig:constrainedInference}
 \vspace{-1.0em}
 \end{figure*}
