--- a/latex/siggraph2013/patternColoring.tex
+++ b/latex/siggraph2013/patternColoring.tex
@@ -86,6 +86,16 @@
 \usepackage{amsfonts}
 \usepackage{dsfont}
 
+%% For auto-inserting line breaks in extra long equations
+\usepackage{etoolbox}
+\usepackage{breqn}
+%% Because dmath and line numbering don't play well together
+% See http://tex.stackexchange.com/questions/86529/breqn-and-lineno-incompatibility
+\BeforeBeginEnvironment{dmath}{\begin{nolinenumbers}}
+\AfterEndEnvironment{dmath}{\end{nolinenumbers}}
+\BeforeBeginEnvironment{dmath*}{\begin{nolinenumbers}}
+\AfterEndEnvironment{dmath*}{\end{nolinenumbers}}
+
 \usepackage{booktabs}
 \usepackage{multirow}
 
