--- a/latex/siggraph2013/patternColoring.tex
+++ b/latex/siggraph2013/patternColoring.tex
@@ -60,7 +60,7 @@
 %\TOGdataURL{}
 %\TOGcodeURL{}
 
-\title{Amazing Paper Title that Grabs Your Attention}
+\title{Probabilistic Color-by-Numbers:\\ Suggesting Pattern Colorizations Using Factor Graphs}
 
 %%% The ``\author{}'' command takes the names and affiliations of each of the
 %%% authors of your paper or abstract. The ``\thanks{}'' command takes the
