Updated images trained from a larger set of artists and new examples.

--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -18,6 +18,7 @@
 \begin{tabular}{cc}
 \includegraphics[width=.22\columnwidth]{figs/guidedSearch0Original}&\includegraphics[width=.7\columnwidth]{figs/guidedSearch0MMR}\vspace{0.5em}\\
 \includegraphics[width=.22\columnwidth]{figs/guidedSearch1Original}&\includegraphics[width=.7\columnwidth]{figs/guidedSearch1MMR}\\
+\includegraphics[width=.22\columnwidth]{figs/guidedSearch2Original}&\includegraphics[width=.7\columnwidth]{figs/guidedSearch2MMR}\\
 Suggestion&Results\\
 \end{tabular}
 
@@ -29,9 +30,9 @@ Suggestion&Results\\
 \begin{figure}[ht]
 \begin{tabular}{ccc} 
 Style&Example&Results\\ %\hline
-\emph{Bold}&\includegraphics[width=.145\columnwidth]{figs/styleResultsBoldExample}&\includegraphics[width=.6\columnwidth]{figs/styleResultsBold}\vspace{0.5em}\\
-\emph{Light}&\includegraphics[width=.145\columnwidth]{figs/styleResultsLightExample}&\includegraphics[width=.6\columnwidth]{figs/styleResultsLight}\vspace{0.5em}\\
-\emph{Dark}&\includegraphics[width=.145\columnwidth]{figs/styleResultsDarkExample}&\includegraphics[width=.6\columnwidth]{figs/styleResultsDark}\vspace{0.5em}\\
+\emph{Bold}&\includegraphics[width=.148\columnwidth]{figs/styleResultsBoldExample}&\includegraphics[width=.62\columnwidth]{figs/styleResultsBold}\vspace{0.5em}\\
+\emph{Light}&\includegraphics[width=.148\columnwidth]{figs/styleResultsLightExample}&\includegraphics[width=.62\columnwidth]{figs/styleResultsLight}\vspace{0.5em}\\
+\emph{Dark}&\includegraphics[width=.148\columnwidth]{figs/styleResultsDarkExample}&\includegraphics[width=.62\columnwidth]{figs/styleResultsDark}\vspace{0.5em}\\
 \end{tabular}
 
 \caption{Our model can be trained to match a target color style. In this example, 17 patterns were chosen in three different styles, and a representative image from each style is shown in the second column. A separate model was then trained on each style, and in the third column we show four samples drawn from each model. In each case, our model is able to learn different properties of the desired distribution over colors.}
