--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -51,6 +51,16 @@ Unconstrained sampling&Constrained sampling\\
 \vspace{-1.0em}
 \end{figure*}
 
+\begin{figure*}[ht]
+\begin{tabular}{cc} 
+\includegraphics[width=.475\linewidth]{figs/styleSugar}&\includegraphics[width=.475\linewidth]{figs/styleAlbenaj}\\
+Artist A&Artist B\\
+\end{tabular}
+
+\caption{Our data-driven approach makes it easy to capture the styles of different artists. Here, we show results sampled from two different models, each trained on 100 images of a single artist.}
+\vspace{-1.0em}
+\end{figure*}
+
 Lots of pictures
 
 Quantitative results from reconstruction experiments, etc.
